add animate images

--- a/animateDemo/animate.html
+++ b/animateDemo/animate.html
@@ -9,7 +9,7 @@
 		padding: 0;
 	}
 	body{
-		background: url(images/jacky/bg33.jpg) no-repeat ;
+		background: url(jacky/bg33.jpg) no-repeat ;
 		background-size: cover;
 		overflow: hidden;
 	}
@@ -148,14 +148,14 @@
 </head>
 <body>
 	<ul>
-		<li> <img src="images/jacky/1.jpg"</li>
-		<li> <img src="images/jacky/2.jpg"</li>
-		<li> <img src="images/jacky/3.jpg"</li>
-		<li> <img src="images/jacky/4.jpg"</li>
-		<li> <img src="images/jacky/5.jpg"</li>
-		<li> <img src="images/jacky/6.jpg"</li>
+		<li> <img src="jacky/1.jpg"</li>
+		<li> <img src="jacky/2.jpg"</li>
+		<li> <img src="jacky/3.jpg"</li>
+		<li> <img src="jacky/4.jpg"</li>
+		<li> <img src="jacky/5.jpg"</li>
+		<li> <img src="jacky/6.jpg"</li>
 	</ul>
-	<img src="images/jacky/xin.png" class="xin">
+	<img src="jacky/xin.png" class="xin">
 
 
 	<div class="a1"><audio src="http://36.250.93.25/file3.data.weipan.cn/127612271/269733f26f08e766d8937b6244cb4c7d08d29878?ip=1495965993,27.38.113.127&ssig=SfLcJERM8n&Expires=1495966593&KID=sae,l30zoo1wmz&fn=Fade-Alan%20Walker.mp3&skiprd=2&se_ip_debug=27.38.113.127&corp=2&from=1221134&wsiphost=local" autoplay="autoplay" controls="controls"loop="loop"></audio></div>
